Composite actions need explicit shells

--- a/action.yml
+++ b/action.yml
@@ -50,6 +50,7 @@ runs:
       if: ${{ runner.os == 'Linux' }}
       run: |
         sudo apt install -y ./obsidian_inst/*.deb
+      shell: bash
     - name: Install obsidian artefact (Windows)
       timeout-minutes: 2
       if: ${{ runner.os == 'Windows' }}
